// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewConsequenceTable > should render the table with data 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      />
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Consequence type
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl w-1/2"
        >
          Network wide
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl w-1/10"
        >
          <a
            class="govuk-link"
            href="/type-of-consequence/2/0?return=%2Freview-disruption"
          >
            Change
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Mode of transport
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          Bus
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          <a
            class="govuk-link"
            href="/create-consequence-network/2/0?return=%2Freview-disruption"
          >
            Change
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Disruption Area
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          N/A
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          <a
            class="govuk-link"
            href="/create-consequence-network/2/0?return=%2Freview-disruption"
          >
            Change
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Advice to display
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          The road is closed for the following reasons: Example, example, example, example
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          <a
            class="govuk-link"
            href="/create-consequence-network/2/0?return=%2Freview-disruption"
          >
            Change
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Remove from journey planner
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          Yes
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          <a
            class="govuk-link"
            href="/create-consequence-network/2/0?return=%2Freview-disruption"
          >
            Change
          </a>
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Disruption delay
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          33 minutes
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          <a
            class="govuk-link"
            href="/create-consequence-network/2/0?return=%2Freview-disruption"
          >
            Change
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <button
    class="govuk-button govuk-button--warning mt-4"
    data-module="govuk-button"
  >
    Delete consequence
  </button>
  <button
    class="govuk-button govuk-button--secondary mt-4 ml-4"
    data-module="govuk-button"
    formaction="/api/duplicate-consequence?consequenceId=0&return=/review-disruption"
  >
    Duplicate consequence
  </button>
</DocumentFragment>
`;

exports[`ReviewConsequenceTable > should render the table with data without change links 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      />
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Consequence type
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl w-1/2"
        >
          Network wide
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl w-1/10"
        />
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Mode of transport
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          Bus
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        />
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Disruption Area
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          N/A
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        />
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Advice to display
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          The road is closed for the following reasons: Example, example, example, example
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        />
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Remove from journey planner
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          Yes
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        />
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle"
          scope="row"
        >
          Disruption delay
        </th>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        >
          33 minutes
        </td>
        <td
          class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
